--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,15 +70,15 @@ TABLE OF CONTENTS:-
 ================================================================*/
 /* --------------- variable --------------- */
 :root {
-  --color-main:#0066ff;
-  --color-primary:#0066ff;
-  --color-secondary:#02b5ff;
-  --color-blue2: #4a00e1;
-  --color-blue4: #5842bc;
-  --color-blue5: #157efb;
+  --color-main:#5842bc;  
+  --color-primary:#5842bc;
+  --color-secondary:#5842bc;
+  --color-blue2: #5842bc;
+  --color-blue4: #5842bc;  
+  --color-blue5: #5842bc;
   --color-blue6: #6640f4;
-  --color-blue7: #8169f1;
-  --color-lightBlue:#15f1ff;
+  --color-blue7: #5842bc;
+  --color-lightBlue:#5842bc;
   --color-darkBlue:#010049;
   --color-darkBlue2:#1f227d;
   --color-orange1:#ff7a41;
@@ -90,7 +90,7 @@ TABLE OF CONTENTS:-
   --color-yellowGreen:#cef54b;
   --color-gray:#eef4f8;
   --color-gray2:#f0eff5;
-  --color-main-grad: linear-gradient(to right, #0c3df4 0%, #02b5ff 100%);
+  --color-main-grad: linear-gradient(to right, #5842bc 0%, #5842bc 100%);
 }
 
 .color-main {
